--- a/docs/2-tetraploid_example.Rmd
+++ b/docs/2-tetraploid_example.Rmd
@@ -82,7 +82,7 @@ plot_profile(data = data, model = feim.mod, grid = TRUE)
 
 Quantitative trait loci (QTL) mapping studies main goal is to investigate the genetic architecture of traits of interest. Single- and multiple-QTL models have been available for inbred, diploid mapping populations for quite some time now (see @DaCostaeSilva2010 for a comprehensive review). However, only recently these methods became available for outbred, polyploid mapping populations. 
 
-The R package `qtlpoly` (v. 0.2.1) is an under development software to map multiple QTL in full-sib families of outcrossing, autopolyploid species [@Pereira2020]. It is based on the partition of the phenotypic variance ($\sigma^2_p$) into variance due to QTL ($\sigma^2_q$) in addition to the residual variance ($\sigma^2_e$) as follows:
+The R package `qtlpoly` (v. 0.2.2) is an under development software to map multiple QTL in full-sib families of outcrossing, autopolyploid species [@Pereira2020]. It is based on the partition of the phenotypic variance ($\sigma^2_p$) into variance due to QTL ($\sigma^2_q$) in addition to the residual variance ($\sigma^2_e$) as follows:
 
 $$\sigma^2_p = \sum_{q=1}^Q \boldsymbol{G}^{(i,i')}_q\sigma^2_q + \sigma^2_{e}$$
 
@@ -90,26 +90,23 @@ where $\boldsymbol{G}^{(i,i')}_q$ is the additive relationship between full-sibs
 
 Because we only need to estimate one parameter per QTL (the very variance component associated with it), it is relatively easy to look for additional QTL and add them to the variance component model, without ending up with an overparameterized model. A multiple-QTL model is known to have increased power when compared to a single-QTL model, with ability to detect minor or separate linked QTL [@Pereira2020].
 
-Variance components associated with putative QTL ($\sigma^2_q$) are tested using score statistics from the R package `varComp` (v. 0.2-0) [@Qu2013]. Final models are fitted using residual maximum likelihood (REML) from the R package `sommer` (v. 3.6) [@Covarrubias-Pazaran2016]. Plots for visualizing the results are based on `ggplot2` (v. 3.1.0) [@Wickham2016]. 
+Variance components associated with putative QTL ($\sigma^2_q$) are tested using score statistics from the R package `varComp` (v. 0.2-0) [@Qu2013]. Final models are fitted using residual maximum likelihood (REML) from the R package `sommer` (v. 4.1) [@Covarrubias-Pazaran2016]. Plots for visualizing the results are based on `ggplot2` (v. 3.1.0) [@Wickham2016]. 
 
 This tutorial was first developed for the [Polyploid Tools Training Workshop](https://www.polyploids.org/workshop/2021/january/info) (December 12-15, 2021), and tested in `r R.version.string` running on either Ubuntu 18.04.1 LTS (64-bit) or Windows 10.
 
 ## Installing the `qtlpoly` package
 
-In order to run this tutorial, you will need to install the `qtlpoly` package, which is available at [GitHub](https://github.com/guilherme-pereira/qtlpoly). You can install all needed packages within R using the commands below:
+In order to run this tutorial, you will need to install the `qtlpoly` package, which is available on its development version at [GitHub](https://github.com/guilherme-pereira/qtlpoly). You can install all needed packages within R using the commands below:
 
 ```{r, eval=FALSE}
 install.packages("devtools")
-devtools::install_url("https://cran.r-project.org/src/contrib/Archive/SPA3G/SPA3G_1.0.tar.gz")
-devtools::install_url("https://cran.r-project.org/src/contrib/Archive/varComp/varComp_0.2-0.tar.gz")
-devtools::install_version("sommer", version = "3.6", repos = "http://cran.us.r-project.org", upgrade = FALSE)
-devtools::install_github("guilherme-pereira/qtlpoly", upgrade = FALSE)
+devtools::install_github("guilherme-pereira/qtlpoly")
 ```
 
 If you have installed `qtlpoly` before, please make sure to run the last line of the installation process again, so that you will have all the last updates. Then, use the function `library()` -- or `require()` -- to load the package:
 
 ```{r, eval=-1}
-devtools::install_github("guilherme-pereira/qtlpoly", upgrade = FALSE)
+devtools::install_github("guilherme-pereira/qtlpoly")
 library(qtlpoly) 
 ```
 
